--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 			<h2>Meus pacientes</h2>
 			<label for="filtrar-tabela">Filtre:</label>
 			<input type="text" name="filtro" id="filtrar-tabela" placeholder="Digite o nome do paciente">
+			
 			<table>
 				<thead>
 					<tr>
@@ -74,6 +75,8 @@
 					</tr>
 				</tbody>
 			</table>
+			<span id="erro-ajax" class="invisivel">Erro ao buscar os pacientes</span>
+			<button id="buscar-pacientes" class="botao bto-principal">Buscar Paciente</button>
 		</section>
 	</main>
 	<!-- ... -->
@@ -112,6 +115,7 @@
 	<script src="js/form.js"></script>
 	<script src="js/remover-paciente.js"></script>
 	<script src="js/filtrar.js"></script>
+	<script src="js/buscar-paciente.js"></script>
 </body>
 
 </html>
